web/styles/portico/portico.css
/* ... */
.push {
    height: 56px;
}

/* The API tabbed content tends to have a lot of code blocks,
   which look nicer against a different background */
.api-center .code-section {
    .blocks {
        background-color: hsl(0, 0%, 98%);
    }

    ul.nav {
        li.active {
            background-color: hsl(0, 0%, 98%);
            border-bottom: 1px solid hsl(0, 0%, 98%);
        }
    }
}

.digest-container {
    padding-top: 100px;
}

.digest-email-container {
    display: block;
    margin: 0 auto !important;
    max-width: 700px;
    padding-bottom: 30px;
}

.digest-email-html {
    padding: 20px;
    background-color: hsl(0, 0%, 100%);
    border-radius: 5px;
}

.app.help {
    display: inline-flex;

    box-shadow: 0 -20px 50px hsla(0, 0%, 0%, 0.04);
    overflow: auto;

    color: hsl(0, 0%, 27%);

    .hamburger {
        display: none;
    }
}

.help {
    .app-main {
        padding: 0;
        margin-top: 59px;
    }

    /* Markdown processor generates lots of spurious <p></p> */
    p:empty {
        margin: 0;
    }

    .sidebar {
        width: 300px;
        z-index: 1;
        /* 100vh - navbar - paddingTop - paddingBottom - bottomNav */
        height: calc(100vh - 59px);

        border-right: 1px solid hsl(219, 10%, 97%);
        overflow: auto;

        background-color: hsl(153, 32%, 55%);
        color: hsl(0, 0%, 100%);

        -webkit-overflow-scrolling: touch;

        .content {
            padding: 10px 20px;
        }

        h1 {
            font-weight: 400;
            font-size: 1.25em;
            line-height: 1.5;
            margin-bottom: 0;

            &.home-link {
                font-size: 1em;
                margin-top: 20px;
                margin-bottom: 17px;

                a::before {
                    display: inline-block;
                    font: normal normal normal 14px/1 FontAwesome;
                    font-size: inherit;

                    content: "\f0d9";
                    margin-right: 10px;
                }
            }
        }

        h1,
        h2,
        h3 {
            &:not(:first-of-type) {
                margin-top: 0;
            }

            a {
                color: inherit;
                display: block;
            }
        }

        h2 {
            font-weight: 400;
            font-size: 1.1em;
            line-height: 1.05;
            margin-bottom: 5px;
        }

        &.slide h2 {
            cursor: pointer;

            &::before {
                display: block;
                font: normal normal normal 14px/1 FontAwesome;
                font-size: inherit;

                content: "\f107";
                margin-right: 5px;
                float: right;

                opacity: 0.5;
            }
        }

        ul {
            margin: 5px 0 10px 12px;
        }

        &.slide ul {
            margin-left: 19px;
            display: none;
        }

        li {
            list-style-type: none;
            font-size: 0.95em;
            font-weight: 400;
            line-height: 1.7;

            cursor: pointer;

            a {
                color: inherit;
                display: block;
            }
        }

        a {
            &.highlighted {
                background-color: hsl(152, 40%, 42%);

                /* Extend highlight to entire width of sidebar, not just link area */
                /* This has been changed from "+" to "- -" because of issue #8403.
                   If the issue has been fixed, please change this back to "+" again. */
                width: calc(100% + 20px);
                margin-left: -40px;
                padding-left: 40px;

                /* Don't show the focus outline for the highlighted page. */
                outline: 0;
            }
        }
    }
}

.help .markdown {
    background-color: hsl(0, 0%, 100%);
    width: calc(100vw - 300px);
    height: calc(100vh - 59px);
}

.help-center ol,
.portico-landing.integrations ol {
    margin-left: 0;
}

.title {
    font-family: Helvetica, sans-serif;
    font-size: 100px;
    font-weight: bold;
    margin-top: 50px;
    margin-bottom: 60px;
}

.digest-page-title {
    text-align: center;
    font-weight: 400;
}

.thanks-page div {
    text-align: center;
}

.lead {
    font-weight: bold;
}

.pitch {
    width: 600px;
    max-width: 100%;
}

.help-inline {
    font-weight: 400;
    font-size: 0.9rem;

    &.text-error {
        color: hsl(1.1, 44.7%, 50.4%);
    }
}

a.title {
    color: hsl(0, 0%, 0%);

    &:hover {
        color: hsl(0, 0%, 50%);
        text-decoration: none;
    }
}

.fakecontrol {
    padding-top: 5px;
    font-weight: bold;
}

img.screenshot {
    /* This makes it so screenshots are still shown
    even if they are larger than their span. */
    max-width: 100%;
}

#pw_strength {
    /* Same width as a Bootstrap default text <input> with padding */
    width: 220px;
    height: 8px;
}

#registration #pw_strength {
    width: 325px;
    margin: 7px auto 0;
}

.def::before {
    content: " - ";
}

.landing-page {
    padding: 2em 0;

    h2,
    h4 {
        font-weight: lighter;
    }

    p {
        font-size: 120%;
    }
}

.platform-icon {
    width: 33%;
}

.portico-page h1 {
    font-weight: 300;
}

label.text-error {
    display: inline;

    padding-left: 5px;
}

input.text-error {
    border-color: hsl(0, 100%, 50%);
    outline-color: hsl(0, 100%, 50%);
}

.portico-container {
    position: relative;
    /* To adjust for flexible footer height we do 2 things:
      - Make the `portico-container` expand to full page height.
      - Fill the empty space with `portico-wrap`. */
    display: flex;
    flex-direction: column;
    height: 100%;

    .portico-wrap {
        flex: 1 0 auto;
    }

    .footer {
        flex-shrink: 0;
    }

    .if-zulip-electron {
        display: none;
    }
}
/* ... */

